--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <h1>Prop Listing App</h1>
+  <h2>Listing App</h2>
   <ul class="main-menu">
     <li><a routerLink="/listings">All Listing</a></li>
     <li *ngIf="userService.loggedIn()">
